<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@drawable/alert_dialog_back"
    android:padding="7dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/select_image"/>

    <Button
        android:id="@+id/Gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/or"/>

    <Button
        android:id="@+id/Internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internet"
        android:layout_marginBottom="3dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button_background"/>

</LinearLayout>